add validator for pagination and query
